# SharedMemory

./: CMakeLists.txt  README.md
src/: SharedMemory.cpp  SharedMemory.hpp  read.cpp  write.cpp
